--- a/package.json
+++ b/package.json
@@ -73,7 +73,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/bitpay/bitcore.git"
+    "url": "https://github.com/MonetaryUnit/bitcore.git"
   },
   "browser": {
     "request": "browser-request"
@@ -88,7 +88,7 @@
     "sha512": "=0.0.1"
   },
   "devDependencies": {
-    "bitcore-build": "bitpay/bitcore-build",
+    "bitcore-build": "MonetaryUnit/bitcore-build#MUE",
     "brfs": "^1.2.0",
     "chai": "^1.10.0",
     "gulp": "^3.8.10",
